# thedevilseye

./: Dockerfile  LICENSE  README.md  devilseye  eye  pyproject.toml  requirements.txt  setup.py  thedevilseye
.src/: _main_.py
assets/: banner.py
lib/: banner.py  colors.py
resources/: headers.py
src/: main.py
thedevilseye/: banner.py  cli.py  colours.py  config.py  main.py  thedevilseye.py  utils.py  version.py
